--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Power Fitness</title>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/logo3.gif">
+
+    
     <style>
         body {
             font-family: 'Baloo Bhai 2', cursive;
@@ -13,7 +16,12 @@
             margin: 0px;
             padding: 0px;
             background:url('images/bg2.jpg');
-            background-size: 100%;
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+            /* height: 100vh;
+            width: 100vw; */
             /* height: 500px;
             width: 400px; */
         }
